tests/baselines/reference/jsxFactoryAndJsxFragmentFactoryNull.errors.txt
jsxFactoryAndJsxFragmentFactoryNull.tsx(3,1): error TS2876: Using JSX fragments requires fragment factory 'null' to be in scope, but it could not be found.


==== jsxFactoryAndJsxFragmentFactoryNull.tsx (1 errors) ====
    declare var h: any;
    
    <></>;
    ~~
!!! error TS2876: Using JSX fragments requires fragment factory 'null' to be in scope, but it could not be found.
    <><span>1</span><><span>2.1</span><span>2.2</span></></>;